refactor transaction diagram to dispatch on output wrapper types